--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT= 5000
 CLIENT_URL=http://localhost:3000
-DATABASE='mongodb+srv://rjibon49:WdrMnCSslW9WjoZe@cluster0.ggbuo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
+DATABASE_CLOUD='mongodb+srv://rjibon49:WdrMnCSslW9WjoZe@cluster0.ggbuo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
