--- a/package.json
+++ b/package.json
@@ -15,8 +15,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "express-jwt": "^7.7.0",
+    "express-validator": "^6.14.0",
+    "formidable": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "slugify": "^1.6.5",
+    "string-strip-html": "^9.1.12"
   }
 }
