--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT= 5000
 CLIENT_URL=http://localhost:3000
 DATABASE_CLOUD='mongodb+srv://rjibon49:WdrMnCSslW9WjoZe@cluster0.ggbuo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
+JWT_SECRET=XDF6G42DF6GDF264GF6H2FX456GHGFGH6D
